--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@fontsource/merriweather": "^4.5.14",
+    "@fontsource/merriweather-sans": "^4.5.10",
     "@gridsome/remark-prismjs": "^0.5.0",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.6.4",
