--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
-*.log
-.cache
+# build output
+dist/
+
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# macOS-specific files
 .DS_Store
-src/.temp
-node_modules
-dist
-.env
-.env.*
