--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
   "name": "hrynko.github.io",
+  "type": "module",
+  "version": "2.0.0",
   "scripts": {
-    "build": "gridsome build",
-    "predeploy": "gridsome build",
-    "deploy": "gh-pages -d dist",
-    "develop": "gridsome develop",
-    "explore": "gridsome explore",
-    "lint": "eslint . --ext .js,.vue",
-    "lint:fix": "eslint . --ext .js,.vue --fix",
-    "format": "prettier . --write"
+    "prepare": "husky",
+    "dev": "astro dev",
+    "build": "astro check && astro build",
+    "lint": "eslint . --ext .js,.jsx,.mjs,.ts,.tsx,.astro --fix --ignore-path .gitignore",
+    "format": "prettier . --write --ignore-path .gitignore"
   },
   "dependencies": {
-    "@fontsource/merriweather": "^4.5.14",
-    "@fontsource/merriweather-sans": "^4.5.10",
-    "@fontsource/mulish": "^4.5.14",
-    "@gridsome/remark-prismjs": "^0.5.0",
-    "@gridsome/source-filesystem": "^0.6.2",
-    "@gridsome/transformer-remark": "^0.6.4",
-    "gridsome": "^0.7.23"
+    "@astrojs/check": "^0.4.1",
+    "@astrojs/mdx": "^2.1.0",
+    "@astrojs/sitemap": "^3.0.5",
+    "@fontsource/noto-sans": "^5.0.21",
+    "@playform/compress": "^0.0.4",
+    "astro": "^4.2.5",
+    "rehype-external-links": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.6.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "gh-pages": "^3.2.3",
-    "prettier": "^2.5.1",
-    "sass": "^1.45.1",
-    "sass-loader": "^8.0.2"
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^0.31.4",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "sass": "^1.70.0",
+    "typescript": "^5.3.3"
   }
 }
