--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -30,11 +30,14 @@ jobs:
           node-version: 20
       - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v4
+        uses: actions/configure-pages@5
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: npm run build
+        run: >
+          npm run build --
+            --site "${{steps.pages.outputs.origin}}"
+            --base "${{steps.pages.outputs.base_path}}"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@3
         with:
