Fix build command in deployment workflow

--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: >
-          npm run build --
-            --site "${{steps.pages.outputs.origin}}"
+        run: |
+          npm run build -- \
+            --site "${{steps.pages.outputs.origin}}" \
             --base "${{steps.pages.outputs.base_path}}"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
